# prompt-lint

./: README.md  prompt-lint.toml  pyproject.toml
.github/workflows/: ci.yml
prompt_lint/: __init__.py  builtin_rules.py  cli.py  config.py  core.py  models.py  rule_types.py  rules.py  rules_registry.py
src/prompt_lint/: __init__.py  rules.py
tests/: test_basic.py  test_config.py
