[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-lint"
version = "0.1.0"
description = "Static linter for LLM prompt strings."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"

authors = [
  { name = "Navdeep Gill", email = "mr.navdeepgill@gmail.com" },
]

keywords = ["llm", "prompt", "lint", "ai", "developer-tools"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/navdeep-G/prompt-lint"

[project.scripts]
prompt-lint = "prompt_lint.cli:main"

[tool.setuptools]
# Flat layout: package directory is the repo root,
# and the only package is `prompt_lint`.
packages = ["prompt_lint"]
